--- a/src/2-forms.html
+++ b/src/2-forms.html
@@ -31,6 +31,6 @@
     </main>
 
     <load src="./partials/footer.html" />
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/2-forms.js"></script>
   </body>
 </html>
