--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Main Page</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
+    <div class="content">
+      <h1>Домашнє завдання №9</h1>
+      <div class="button-container">
+        <a href="1-gallery.html" class="button">Gallery</a>
+        <a href="2-forms.html" class="button">Forms</a>
+      </div>
+    </div>
+    <footer>
+      <p>Олексій Зюзін</p>
+    </footer>
   </body>
 </html>
