add navigation links and footer to gallery and form pages

--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <div class="tasks-block">
+      <a href="index.html" class="tasks">Main</a>
+      <a href="2-form.html" class="tasks">Feedback form</a>
+    </div>
     <ul class="gallery"></ul>
+    <footer>
+      <p>
+        <a href="https://github.com/Syvyj/goit-js-hw-09" class="footer-link"
+          >Oleksii Ziuzin</a
+        >
+      </p>
+    </footer>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
