--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
         <a class="tasks" href="./1-gallery.html">Gallery</a>
         <a class="tasks" href="./2-form.html">Form</a>
       </div>
-    </div>
+<footer>
+        <p><a href="https://github.com/Syvyj/goit-js-hw-09" class="footer-link">Oleksii Ziuzin</a></p>
+    </footer>
   </body>
 </html>
