--- a/src/2-form.html
+++ b/src/2-form.html
@@ -13,6 +13,10 @@
     />
   </head>
   <body>
+    <div class="tasks-block">
+      <a href="index.html" class="tasks">Main</a>
+      <a href="1-gallery.html" class="tasks">Gallery</a>
+    </div>
     <form class="feedback-form" autocomplete="off">
       <div class="feedback-cont">
         <label> Email </label>
@@ -22,7 +26,13 @@
       </div>
       <button type="submit">Submit</button>
     </form>
-
+    <footer>
+      <p>
+        <a href="https://github.com/Syvyj/goit-js-hw-09" class="footer-link"
+          >Oleksii Ziuzin</a
+        >
+      </p>
+    </footer>
     <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
