fix: update navigation links to use relative paths

--- a/src/2-form.html
+++ b/src/2-form.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="tasks-block">
-      <a href="index.html" class="tasks">Main</a>
-      <a href="1-gallery.html" class="tasks">Gallery</a>
+      <a href="./index.html" class="tasks">Main</a>
+      <a href="./1-gallery.html" class="tasks">Gallery</a>
     </div>
     <form class="feedback-form" autocomplete="off">
       <div class="feedback-cont">
