--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="tasks-block">
-      <a href="index.html" class="tasks">Main</a>
-      <a href="2-form.html" class="tasks">Feedback form</a>
+      <a href="./index.html" class="tasks">Main</a>
+      <a href="./2-form.html" class="tasks">Feedback form</a>
     </div>
     <ul class="gallery"></ul>
     <footer>
