fix: update script tag paths in 1-gallery.html and 2-form.html

--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -13,7 +13,7 @@
     </div>
     <ul class="gallery"></ul>
 
-    <script type="module" src="./js/1-gallery.js"></script>
+    <script type="module" src="js/1-gallery.js"></script>
     <footer>
       <p>
         <a href="https://github.com/Syvyj/goit-js-hw-09" class="footer-link"
