--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Great+Vibes&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parkinsans:wght@300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Yeseva+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" crossorigin href="/assets/styles-CT2NMnpM.css">
+    <link rel="stylesheet" crossorigin href="./assets/styles-CT2NMnpM.css">
   </head>
   <body>
     <div class="container">
