--- a/2-form.html
+++ b/2-form.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Great+Vibes&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parkinsans:wght@300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Yeseva+One&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/2-form.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-B5Qt9EMX.js">
-    <link rel="stylesheet" crossorigin href="/assets/styles-CT2NMnpM.css">
+    <script type="module" crossorigin src="./2-form.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
+    <link rel="stylesheet" crossorigin href="./assets/styles-CT2NMnpM.css">
   </head>
   <body>
     <div class="tasks-block">
