--- a/1-gallery.html
+++ b/1-gallery.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <script type="module" crossorigin src="/1-gallery.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-B5Qt9EMX.js">
-    <link rel="modulepreload" crossorigin href="/assets/vendor-D0gBiHs0.js">
-    <link rel="stylesheet" crossorigin href="/assets/vendor-AL2zCFOW.css">
-    <link rel="stylesheet" crossorigin href="/assets/styles-CT2NMnpM.css">
+    <script type="module" crossorigin src="/.1-gallery.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
+    <link rel="modulepreload" crossorigin href="./assets/vendor-D0gBiHs0.js">
+    <link rel="stylesheet" crossorigin href="./assets/vendor-AL2zCFOW.css">
+    <link rel="stylesheet" crossorigin href="./assets/styles-CT2NMnpM.css">
   </head>
   <body>
     <div class="tasks-block">
